Fix nav dropdown alignment

--- a/css/nav.css
+++ b/css/nav.css
@@ -42,7 +42,7 @@ nav ul li {
 }
 nav ul li a {
     display: inline-block;
-    padding: 2rem 3.5rem;
+    padding: 2rem 4rem;
     width: 100%;
     background: var(--bg-color);
     color: var(--fg-color);
